--- a/client/src/components/modules/Musicard.css
+++ b/client/src/components/modules/Musicard.css
@@ -2,13 +2,17 @@
   border: var(--darkgrey) 1px solid;
   border-radius: var(--l);
   background-color: var(--white);
-  width: 30%;
+  min-width: 30%;
   text-align: center;
   margin: var(--s);
   align-items: center;
   padding: var(--l);
   box-shadow: 2px 2px 12px var(--blueshadow);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.Deck-deckGroup .Musicard-container {
+  max-width: 30%;
 }
 
 .Musicard-container:hover {
