more trade history stuf

--- a/client/src/components/modules/Musicard.css
+++ b/client/src/components/modules/Musicard.css
@@ -3,10 +3,11 @@
   border-radius: var(--l);
   background-color: var(--white);
   min-width: 30%;
+  max-width: 40%;
   text-align: center;
   margin: var(--s);
   align-items: center;
-  padding: var(--l);
+  padding: var(--l) calc(var(--m) + 2px);
   box-shadow: 2px 2px 12px var(--blueshadow);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
