--- a/client/src/components/modules/TradeHistory.css
+++ b/client/src/components/modules/TradeHistory.css
@@ -1,3 +1,9 @@
+.TradeHistory-title {
+  font-size: 50px;
+  margin-bottom: var(--l);
+  padding-bottom: var(--m);
+}
+
 .TradeHistoryCard-container {
   border: var(--darkgrey) 1px solid;
   border-radius: var(--m);
